[gd_scene load_steps=7 format=3 uid="uid://cqhly4rbtlphu"]

[ext_resource type="Theme" uid="uid://k86iiekmveix" path="res://Themes/general_ui.tres" id="1_4moc0"]
[ext_resource type="Script" path="res://Scripts/Menu/MainMenu.gd" id="2_mv3ou"]
[ext_resource type="Texture2D" uid="uid://bea71ecbb514d" path="res://Sprites/UI/Menu/MainMenuBG.png" id="3_tyi0c"]
[ext_resource type="Script" path="res://Scripts/Menu/CreateWorldButton.gd" id="4_emh8l"]
[ext_resource type="Script" path="res://Scripts/Menu/LoadMenu.gd" id="5_s76cm"]
[ext_resource type="Script" path="res://Scripts/Menu/DeleteMenu.gd" id="6_xy45m"]

[node name="Main" type="Node2D"]

[node name="MenuControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
theme = ExtResource("1_4moc0")
script = ExtResource("2_mv3ou")

[node name="MenuBG" type="TextureRect" parent="MenuControl"]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 650.0
theme = ExtResource("1_4moc0")
texture = ExtResource("3_tyi0c")
metadata/_edit_lock_ = true

[node name="FrontMenus" type="Control" parent="MenuControl"]
anchors_preset = 0
offset_left = 275.0
offset_top = 112.0
offset_right = 868.0
offset_bottom = 536.0
theme = ExtResource("1_4moc0")
metadata/_edit_lock_ = true

[node name="NewGameMenu" type="Control" parent="MenuControl/FrontMenus"]
visible = false
anchors_preset = 0
offset_top = 164.0
offset_right = 592.0
offset_bottom = 424.0

[node name="NGMBG" type="Panel" parent="MenuControl/FrontMenus/NewGameMenu"]
layout_mode = 2
offset_right = 592.0
offset_bottom = 260.0
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="MenuControl/FrontMenus/NewGameMenu"]
layout_mode = 0
offset_left = 3.0
offset_top = 231.0
offset_right = 54.0
offset_bottom = 256.0
theme = ExtResource("1_4moc0")
text = "Back"
metadata/_edit_lock_ = true

[node name="RowContainer" type="VBoxContainer" parent="MenuControl/FrontMenus/NewGameMenu"]
layout_mode = 0
offset_right = 592.0
offset_bottom = 228.0

[node name="NameRow" type="HBoxContainer" parent="MenuControl/FrontMenus/NewGameMenu/RowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuControl/FrontMenus/NewGameMenu/RowContainer/NameRow"]
layout_mode = 2
text = "WORLD NAME:"

[node name="LineEdit" type="LineEdit" parent="MenuControl/FrontMenus/NewGameMenu/RowContainer/NameRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SeedRow" type="HBoxContainer" parent="MenuControl/FrontMenus/NewGameMenu/RowContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MenuControl/FrontMenus/NewGameMenu/RowContainer/SeedRow"]
layout_mode = 2
text = "SEED:"

[node name="LineEdit" type="LineEdit" parent="MenuControl/FrontMenus/NewGameMenu/RowContainer/SeedRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"

[node name="CreateWorldButton" type="Button" parent="MenuControl/FrontMenus/NewGameMenu"]
layout_mode = 0
offset_left = 451.0
offset_top = 230.0
offset_right = 588.0
offset_bottom = 255.0
text = "Create World"
script = ExtResource("4_emh8l")

[node name="ProgressBars" type="VBoxContainer" parent="MenuControl/FrontMenus/NewGameMenu"]
layout_mode = 0
offset_top = 260.0
offset_right = 592.0
offset_bottom = 331.0

[node name="ProgressBar" type="ProgressBar" parent="MenuControl/FrontMenus/NewGameMenu/ProgressBars"]
layout_mode = 2

[node name="CreationMsg" type="Label" parent="MenuControl/FrontMenus/NewGameMenu/ProgressBars"]
layout_mode = 2
text = "DEFAULT MSG"
horizontal_alignment = 1

[node name="LoadMenu" type="Control" parent="MenuControl/FrontMenus"]
visible = false
anchors_preset = 0
offset_left = 173.0
offset_top = 240.0
offset_right = 429.0
offset_bottom = 424.0
theme = ExtResource("1_4moc0")
script = ExtResource("5_s76cm")
metadata/_edit_lock_ = true

[node name="ButtonsBG" type="Panel" parent="MenuControl/FrontMenus/LoadMenu"]
layout_mode = 0
offset_top = -1.0
offset_right = 256.0
offset_bottom = 183.0
theme = ExtResource("1_4moc0")
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MenuControl/FrontMenus/LoadMenu"]
layout_mode = 0
offset_left = 3.0
offset_right = 256.0
offset_bottom = 154.0
theme = ExtResource("1_4moc0")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/FrontMenus/LoadMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_4moc0")
theme_override_constants/separation = 2

[node name="BackButton" type="Button" parent="MenuControl/FrontMenus/LoadMenu"]
layout_mode = 0
offset_left = 102.0
offset_top = 154.0
offset_right = 153.0
offset_bottom = 179.0
theme = ExtResource("1_4moc0")
text = "Back"
metadata/_edit_lock_ = true

[node name="DeleteMenu" type="Control" parent="MenuControl/FrontMenus"]
visible = false
anchors_preset = 0
offset_left = 173.0
offset_top = 240.0
offset_right = 429.0
offset_bottom = 424.0
theme = ExtResource("1_4moc0")
script = ExtResource("6_xy45m")
metadata/_edit_lock_ = true

[node name="ButtonsBG" type="Panel" parent="MenuControl/FrontMenus/DeleteMenu"]
layout_mode = 0
offset_top = -1.0
offset_right = 256.0
offset_bottom = 183.0
theme = ExtResource("1_4moc0")
metadata/_edit_lock_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="MenuControl/FrontMenus/DeleteMenu"]
layout_mode = 0
offset_left = 3.0
offset_right = 256.0
offset_bottom = 154.0
theme = ExtResource("1_4moc0")
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuControl/FrontMenus/DeleteMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_4moc0")
theme_override_constants/separation = 2

[node name="BackButton" type="Button" parent="MenuControl/FrontMenus/DeleteMenu"]
layout_mode = 0
offset_left = 102.0
offset_top = 154.0
offset_right = 153.0
offset_bottom = 179.0
theme = ExtResource("1_4moc0")
text = "Back"
metadata/_edit_lock_ = true

[node name="MainMenu" type="Control" parent="MenuControl/FrontMenus"]
anchors_preset = 0
offset_left = 173.0
offset_top = 240.0
offset_right = 429.0
offset_bottom = 424.0
theme = ExtResource("1_4moc0")
metadata/_edit_lock_ = true

[node name="ButtonsBG" type="Panel" parent="MenuControl/FrontMenus/MainMenu"]
layout_mode = 2
offset_top = -1.0
offset_right = 256.0
offset_bottom = 183.0
theme = ExtResource("1_4moc0")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="MenuControl/FrontMenus/MainMenu"]
layout_mode = 2
offset_top = -12.0
offset_right = 256.0
offset_bottom = 185.0
theme = ExtResource("1_4moc0")
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 4

[node name="Buttons" type="VBoxContainer" parent="MenuControl/FrontMenus/MainMenu/MarginContainer"]
layout_mode = 2
theme = ExtResource("1_4moc0")

[node name="NewGameButton" type="Button" parent="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4moc0")
text = "New Game"
metadata/_edit_lock_ = true

[node name="LoadGameButton" type="Button" parent="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4moc0")
text = "Load Game"
metadata/_edit_lock_ = true

[node name="DeleteSaveButton" type="Button" parent="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4moc0")
text = "Delete Saves"
metadata/_edit_lock_ = true

[node name="MapBuilder" type="Button" parent="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4moc0")
text = "Map Builder"
metadata/_edit_lock_ = true

[node name="OptionsButton" type="Button" parent="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4moc0")
text = "Options"
metadata/_edit_lock_ = true

[node name="ExitButton" type="Button" parent="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4moc0")
text = "Exit"
metadata/_edit_lock_ = true

[node name="Title" type="Panel" parent="MenuControl/FrontMenus"]
layout_mode = 0
offset_right = 592.0
offset_bottom = 112.0
theme = ExtResource("1_4moc0")
metadata/_edit_lock_ = true

[node name="TitleText" type="RichTextLabel" parent="MenuControl/FrontMenus/Title"]
layout_mode = 0
offset_left = 3.0
offset_right = 595.0
offset_bottom = 112.0
theme = ExtResource("1_4moc0")
bbcode_enabled = true
text = " _______           _                          _      _ 
|__   __|         | |                        | |    | |
   | |  ___ __  __| |_ __      __ ___   _ __ | |  __| |
   | | / _ \\\\ \\/ /| __|\\ \\ /\\ / // _ \\ | '__|| | / _` |
   | ||  __/ >  < | |_  \\ V  V /| (_) || |   | || (_| |
   |_| \\___|/_/\\_\\ \\__|  \\_/\\_/  \\___/ |_|   |_| \\__,_|"
autowrap_mode = 0
metadata/_edit_lock_ = true

[connection signal="button_up" from="MenuControl/FrontMenus/NewGameMenu/BackButton" to="MenuControl" method="_on_back_button_button_up"]
[connection signal="button_up" from="MenuControl/FrontMenus/NewGameMenu/CreateWorldButton" to="MenuControl/FrontMenus/NewGameMenu/CreateWorldButton" method="_on_button_up"]
[connection signal="visibility_changed" from="MenuControl/FrontMenus/LoadMenu" to="MenuControl/FrontMenus/LoadMenu" method="_on_visibility_changed"]
[connection signal="button_up" from="MenuControl/FrontMenus/LoadMenu/BackButton" to="MenuControl" method="_on_back_button_button_up"]
[connection signal="visibility_changed" from="MenuControl/FrontMenus/DeleteMenu" to="MenuControl/FrontMenus/DeleteMenu" method="_on_visibility_changed"]
[connection signal="button_up" from="MenuControl/FrontMenus/DeleteMenu/BackButton" to="MenuControl" method="_on_back_button_button_up"]
[connection signal="button_up" from="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons/NewGameButton" to="MenuControl" method="_on_new_game_button_button_up"]
[connection signal="button_up" from="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons/LoadGameButton" to="MenuControl" method="_on_load_game_button_button_up"]
[connection signal="button_up" from="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons/DeleteSaveButton" to="MenuControl" method="_on_delete_save_button_button_up"]
[connection signal="button_up" from="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons/MapBuilder" to="MenuControl" method="_on_map_builder_button_up"]
[connection signal="button_up" from="MenuControl/FrontMenus/MainMenu/MarginContainer/Buttons/ExitButton" to="MenuControl" method="_on_exit_button_button_up"]
